getting the data from giphy api

--- a/index.html
+++ b/index.html
@@ -6,14 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>Giphy Basket</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+
+        <header class="row">
+            <div class="col-12">
+                <h1>Giphy Basket</h1>
+            </div>
+        </header>
+        <div id="giphy-items" class="row">
+
+        </div>
+        <div class="row">
+            <div id="current-gif" class="col12">
+
+            </div>
+        </div>
+        ><div id="my-gifs" class="row">
+
+        </div>
 
 
+    </div>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
+        integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
     <script src="app/main.js" type="module"></script>
 </body>
 
